tests/baselines/reference/classMemberInitializerWithLamdaScoping4.errors.txt
tests/cases/compiler/classMemberInitializerWithLamdaScoping3_0.ts(1,1): error TS1148: Cannot compile modules unless the '--module' flag is provided. Consider setting the 'module' compiler option in a 'tsconfig.json' file.
tests/cases/compiler/classMemberInitializerWithLamdaScoping3_1.ts(8,21): error TS2304: Cannot find name 'field1'.


==== tests/cases/compiler/classMemberInitializerWithLamdaScoping3_0.ts (1 errors) ====
    export var field1: string;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1148: Cannot compile modules unless the '--module' flag is provided. Consider setting the 'module' compiler option in a 'tsconfig.json' file.
    
==== tests/cases/compiler/classMemberInitializerWithLamdaScoping3_1.ts (1 errors) ====
    declare var console: {
        log(msg?: any): void;
    };
    export class Test1 {
        constructor(private field1: string) {
        }
        messageHandler = () => {
            console.log(field1); // Should be error that couldnt find symbol field1
                        ~~~~~~
!!! error TS2304: Cannot find name 'field1'.
        };
    }